[package]
name = "silocut"
version = "1.5.0"
edition = "2021"

[dependencies]
egui = "0.34.3"
eframe = "0.34.3"
openh264 = { version = "0.9.3", features = ["source"] }
symphonia = { version = "0.6.0", features = ["all"] }
symphonia-core = "0.6.0"
rodio = { version = "0.20.1", features = ["wav", "mp3"] }
rfd = "0.15.0"
image = { version = "0.25.0", default-features = false, features = ["png", "ico", "jpeg"] }
rayon = "1.10.0"
mp4e = "1.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows-sys = { version = "0.52.0", features = [
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[build-dependencies]
winres = "0.1.12"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Allow maximum optimization optimizations
# Panic unwinding is intentionally kept (not "abort"): a panic in a background
# decode/record/export worker then terminates only that thread, never the whole app.
strip = true         # Strip symbols
